--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "php": "^8.2",
         "filament/filament": "3.3",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "parfaitementweb/filament-country-field": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
